testsuite/tests/package/package06e.hs
module Package06e where
import GHC.IR.Haskell.Syntax.Type
import GHC.Entity.Unique.FiniteMap
